revert to previous working codes
